[build-system]
requires = ["setuptools>=67.5"]
build-backend = "setuptools.build_meta"

[project]
name = "onepassword-keyring"
version = "0.1.1"
description = "Keyring backend reading password data from 1Password"
authors = [
    {name = "Falling Springs", email = "fallstosprings@gmail.com"},
    {name = "Anton Hvornum", email = "torxed@archlinux.org"},
]
maintainers = [
    {name = "Falling Springs", email = "fallstosprings@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=2.7"
keywords = ["onepassword", "keyring", "password"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "keyring"
]

[project.urls]
Home = "https://github.com/falling-springs/onepassword-keyring"
Documentation = "https://github.com/falling-springs/onepassword-keyring"
Source = "https://github.com/falling-springs/onepassword-keyring"

[project.entry-points."keyring"]
backends = "onepassword_keyring"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "black",
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[project.scripts]
onepassword-keyring = "onepassword-keyring:run_as_a_module"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"onepassword_keyring" = [
    "**/*.py",
]

[tool.setuptools.package-dir]
onepassword-keyring = "onepassword_keyring"

[tool.flake8]
max-line-length = 88

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
not_skip = "__init__.py"

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=onepassword_keyring -vv"
testpaths = [
    "tests"
]

[tool.black]
# Set to match isort, maybe overkill.
line_length = 88