[metadata]
name = onepassword-keyring
description = Keyring backend reading password data from OnePassword
version = 0.1.0
author = Falling Springs
author_email = fallstosprings@gmail.com
url = https://github.com/falling-springs/onepassword-keyring
long_description = file: README.md
long_description_content_type = text/markdown
keywords = onepassword keyring password
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    keyring

[options.entry_points]
keyring.backends =
    onepassword = onepassword_keyring

[options.extras_require]

dev =
    flake8
    isort
    black
    pytest
    pytest-mock
    pytest-cov


[flake8]
max-line-length = 88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
not_skip = __init__.py

[bdist_wheel]
universal = 1

[tool:pytest]
adopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=onepassword_keyring -vv